Fixed problems with header and footer on mobile

--- a/src/components/mainPage/MainPage.css
+++ b/src/components/mainPage/MainPage.css
@@ -1,6 +1,3 @@
-.main_page_container {
-    margin: 3px;
-}
 
 @media only screen and (min-width: 750px  ) {
 
